﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext

	New features:
		-[Wcf] SimpleInjectorServiceBehavior class added to make it easier for users to create self-hosted
		 WCF services. (work item 20898)

	Improvements/Changes:
		-[Core] Container.InjectProperties has been made obsolete. (work item 20945)
		-[Mvc] SimpleInjectorMvcExtensions.RegisterMvcAttributeFilterProvider has been marked obsolete. 
		 (work item 20946)

Version 2.5.2 (v2.5.2 RTM) 2014-07-13

	New features:
		-[Core] ContainerOptions.EnableDynamicAssemblyCompilation property has been added that can be used
		 to prevent the container from doing dynamic assembly compilation, such as the issues related to
		 work item 20677.

	Bug fixes:
		-[Core] Dynamic assembly compilation is suppressed when the debugger is attached to prevent problems
		 with certain configurations of Visual Studio. (work item 20904)


Version 2.5.1 (v2.5.1 RTM) 2014-04-06

	Bug fixes:
		-[Wcf] Components that were registered as PerWcfOperation were not disposed when the WCF called
		 ReleaseInstance on a different thread. There was also a memory leak related to this issue. This
		 has been fixed as well.
		-[Wcf] RegisterWcfServices class now registers a WCF service class as Singleton in case it is
		 marked with [ServiceBehavior(InstanceContextMode = InstanceContextMode.Single) and an exception is
		 thrown if it is marked with [ServiceBehavior(ConcurrencyMode = ConcurrencyMode.Multiple)], because
		 Simple Injector will be unable to handle that configuration without causing concurrency bugs.


Version 2.5.0 (v2.5 RTM) 2014-03-02

	General description:
		The most prominent new feature is the addition of async/await support. This is supported by the
		addition of a new ExecutionContextScoping package and the ExecutionContextScopeLifestyle. On top of 
		this is the new Web API integration package that allows registering instances with a 